# pyconstclasses

./: .gitattributes  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  coverage.json  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py  tox.ini
.github/workflows/: covbadge.yaml  examples.yaml  format.yaml  tests.yaml
constclasses/: __init__.py
constclasses/src/: const_class.py
constclasses/test/: test_const_class.py
examples/: common_exclude.py  common_include.py  common_with_strict_types.py  const_class_basic.py  const_class_inherit_constructor.py  const_class_new.py  const_class_with_kwargs.py  static_const_class_basic.py  static_const_class_mutable_instance.py  with_strict_types.py
pyconstclasses/: __init__.py
pyconstclasses.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
pyconstclasses/src/: const_class.py
pyconstclasses/test/: test_const_class.py
scripts/: cleanup.sh  format.sh
src/constclasses/: __init__.py  ccerror.py  const_class.py  const_class_base.py  static_const_class.py
test/: common.py  test_const_class.py  test_const_class_base.py  test_static_const_class.py  utility.py
test/common/: utility.py
